admission/validatingAdmissionPolicies/policies/wildcard-rules/roles/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-wildcard-rules-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3c995f70-3150-56d0-b682-82c7e55e8a1b
  labels:
    check-role-wildcard-rules.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    check-role-wildcard-rules.security.kolteq.com/audit: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: role-wildcard-rules
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-role-wildcard-rules.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-wildcard-rules-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3c995f70-3150-56d0-b682-82c7e55e8a1b
  labels:
    check-role-wildcard-rules.security.kolteq.com/warn: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/audit: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-wildcard-rules
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-wildcard-rules.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-wildcard-rules-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3c995f70-3150-56d0-b682-82c7e55e8a1b
  labels:
    check-role-wildcard-rules.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    check-role-wildcard-rules.security.kolteq.com/enforce: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-wildcard-rules
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-role-wildcard-rules.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-wildcard-rules-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3c995f70-3150-56d0-b682-82c7e55e8a1b
  labels:
    check-role-wildcard-rules.security.kolteq.com/audit: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/enforce: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-wildcard-rules
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-wildcard-rules.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-wildcard-rules-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3c995f70-3150-56d0-b682-82c7e55e8a1b
  labels:
    check-role-wildcard-rules.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    check-role-wildcard-rules.security.kolteq.com/audit: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-wildcard-rules
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-role-wildcard-rules.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-wildcard-rules-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3c995f70-3150-56d0-b682-82c7e55e8a1b
  labels:
    check-role-wildcard-rules.security.kolteq.com/enforce: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/audit: 'false-true'
    check-role-wildcard-rules.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-wildcard-rules
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-wildcard-rules.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
