admission/validatingAdmissionPolicies/policies/wildcard-rules/roles/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: role-wildcard-rules
  annotations:
    security.kubeapt.io/displayName: 'Wildcard Rules'
    security.kubeapt.io/description: Wildcard rules (apiGroups/resources/verbs all "*") are disallowed.
    security.kubeapt.io/resource: Roles
    security.kubeapt.io/severity: "10"
    security.kubeapt.io/remediation: "Replace wildcard apiGroups/resources/verbs with explicit values. Fields: rules[*].apiGroups, rules[*].resources, rules[*].verbs."
    policies.kolteq.com/validatingAdmissionPolicy: 3c995f70-3150-56d0-b682-82c7e55e8a1b
  labels:
    check-role-wildcard-rules.security.kolteq.com/audit: 'false - true'
    check-role-wildcard-rules.security.kolteq.com/enforce: 'false - true'
    check-role-wildcard-rules.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - rbac.authorization.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - roles
  validations:
  - expression: |
      !has(object.rules) ||
              object.rules.all(r,
                !((has(r.apiGroups) && r.apiGroups.exists(ag, ag == "*")) ||
                  (has(r.resources) && r.resources.exists(res, res == "*")) ||
                  (has(r.verbs) && r.verbs.exists(v, v == "*")))
              )
    message: |
      Wildcard rules (apiGroups/resources/verbs all "*") are disallowed.
